[package]
name = "spatialos-sys"
version = "0.2.0"
authors = ["Thomas Nicollet <thomas.nicollet@epitech.eu>"]
edition = "2018"
homepage = "https://github.com/Project-StarDust/spatialos-sys"
repository = "https://github.com/Project-StarDust/spatialos-sys"
description = "System crate used to link with SpatialOs libraries"
license = "GPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
user32-sys = "0.1.2"
gdi32-sys = "0.2.0"

[build-dependencies]
bindgen = "0.56.0"
